--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url("background.jpg.jpeg");
+      background-image: url("background.jpeg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
