--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script>
     const dictionary = {
       family: {
-        "жаным": "душа моя, дорогой",
+        "жаным": "душа моя" or "дорогой",
         "бауыр": "брат",
         "аға": "старший брат",
         "қарындас": "младшая сестра",
@@ -63,7 +63,7 @@
       nature: {
         "жер": "земля",
         "ел": "народ",
-        "көк": "небо, степь",
+        "көк": "небо",
         "жусан": "полынь"
       },
       tradition: {
@@ -129,5 +129,6 @@
   </script>
 </body>
 </html>
+
 
 
