--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script>
     const dictionary = {
       family: {
-        "жаным": "душа моя" or "дорогой",
+        "жаным": "душа моя","дорогой",
         "бауыр": "брат",
         "аға": "старший брат",
         "қарындас": "младшая сестра",
@@ -129,6 +129,7 @@
   </script>
 </body>
 </html>
+
 
 
 
