--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script>
     const dictionary = {
       family: {
-        "жаным": "душа моя, дорогой",
+        "жаным": ["душа моя" , "дорогой"],
         "бауыр": "брат",
         "аға": "старший брат",
         "қарындас": "младшая сестра",
