--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       nature: {
         "жер": "земля",
         "ел": "народ",
-        "көк": "небо, степь",
+        "көк":["небо" , "степь"],
         "жусан": "полынь"
       },
       tradition: {
@@ -77,8 +77,8 @@
         "шаңырақ": "верх юрты"
       },
       food: {
-        "қымыз": "кумыс",
-        "шұбат": "напиток из верблюжьего молока",
+        "қымыз": ["кумыс", "кобылье молоко"],
+        "шұбат": ["напиток из верблюжьего молока", "верблюжье молоко"],
         "бауырсақ": "жареное тесто",
         "қазы": "конская колбаса"
       }
@@ -129,3 +129,4 @@
   </script>
 </body>
 </html>
+
