--- a/index.html
+++ b/index.html
@@ -64,12 +64,19 @@
         "жер": "земля",
         "ел": "народ",
         "көк":["небо" , "степь"],
-        "жусан": "полынь"
+        "жусан": "полынь",
+        "тау": "гора",
+        "өзен": "река",
+        "дала": "степь",
+        "орман": "лес"
       },
       tradition: {
         "батыр": "герой, воин",
         "той": "праздник",
-        "домбыра": "национальный инструмент"
+        "домбыра": "национальный инструмент",
+        "жыр": ["поэма","песня"],
+        "айтыс":["состязание поэтов","соревнование поэтов","соревнование акынов","состязание акынов"],
+        "ақын" : ["поэт-импровизатор","поэт"]
       },
       life: {
         "үй": "дом",
@@ -129,4 +136,5 @@
   </script>
 </body>
 </html>
+
 
