--- a/index.html
+++ b/index.html
@@ -148,4 +148,5 @@
   </script>
 </body>
 </html>
-<a href="game-with-images.html">Играть с картинками</a>
+<a href="gamewithimages.html">Играть с картинками</a>
+
