--- a/gamewithimages.html
+++ b/gamewithimages.html
@@ -40,26 +40,27 @@
 
   <script>
     // Массив вопросов
-    const questions = [
-      {
-        text: "Что изображено на картинке?",
-        image: "images/юрта.jpg",
-        answers: ["Юрта", "Айран", "Бешбармак"],
-        correct: 0
-      },
-      {
-        text: "Что изображено на картинке?",
-        image: "images/семья.jpg",
-        answers: ["Отбасы", "Жаным", "Апа"],
-        correct: 0
-      },
-      {
-        text: "Это традиционное казахское блюдо:",
-        image: "images/бешбармак.jpg",
-        answers: ["Плов", "Бешбармак", "Манты"],
-        correct: 1
-      }
-    ];
+   const questions = [
+  {
+    text: "Что изображено на картинке?",
+    image: "images/yourta.jpg",
+    answers: ["Киіз үй", "Айран", "Шаңырақ"],
+    correct: 0
+  },
+  {
+    text: "Что изображено на картинке?",
+    image: "images/fam.jpg",
+    answers: ["Отбасы", "Жаным", "Апа"],
+    correct: 0
+  },
+  {
+    text: "Это традиционное казахское блюдо:",
+    image: "images/besh.jpg",
+    answers: ["Плов", "Бешбармак", "Манты"],
+    correct: 1
+  }
+];
+
 
     let current = 0;
 
